--- a/figures/fig3-basal-features/fig3-basal-features.ipynb
+++ b/figures/fig3-basal-features/fig3-basal-features.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9e2f41d1-e888-492d-a436-b743ec80e22a",
+   "metadata": {},
+   "source": [
+    "# Figure 3\n",
+    "\n",
+    "Inset panels from the same radar images as in Figure 2."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "78a3687d-76d5-499f-abe9-ed0e0ce91be2",
@@ -14,7 +24,46 @@
     "from matplotlib.gridspec import GridSpec\n",
     "\n",
     "from impdar.lib.load import load\n",
-    "from scipy.io import loadmat"
+    "from scipy.io import loadmat\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "681575f6-3c3d-4ceb-bffc-6f5543ba8ed8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Download the radar images if necessary ###\n",
+    "\n",
+    "download_radar_images = False\n",
+    "\n",
+    "cresis_base_dir = 'https://data.cresis.ku.edu/data/rds/2013_Antarctica_Basler/'\n",
+    "data_base_dir = '../../data/radar/'\n",
+    "frames = ['20131227_12','20131219_02']\n",
+    "\n",
+    "if download_radar_images:\n",
+    "    \n",
+    "    import os\n",
+    "\n",
+    "    # Standard focused images\n",
+    "    cresis_type = 'CSARP_standard/'\n",
+    "    if not os.path.exists(data_dir+cresis_type):\n",
+    "        os.mkdir(data_dir+cresis_type)\n",
+    "    frame = frames[0]\n",
+    "    os.system('wget -L %s%s%s/Data_img_02_%s_001.mat -P %s'%(cresis_base_dir,cresis_type,frame,frame,data_base_dir+cresis_type));\n",
+    "    frame = frames[1]\n",
+    "    os.system('wget -L %s%s%s/Data_img_02_%s_001.mat -P %s'%(cresis_base_dir,cresis_type,frame,frame,data_base_dir+cresis_type));\n",
+    "\n",
+    "    # Layer data (bed and surface picks)\n",
+    "    cresis_type = 'CSARP_layerData/'\n",
+    "    if not os.path.exists(data_dir+cresis_type):\n",
+    "        os.mkdir(data_dir+cresis_type)\n",
+    "    frame = frames[0]\n",
+    "    os.system('wget -L %s%s%s/Data_%s_001.mat -P %s'%(cresis_base_dir,cresis_type,frame,frame,data_base_dir+cresis_type));\n",
+    "    frame = frames[1]\n",
+    "    os.system('wget -L %s%s%s/Data_%s_001.mat -P %s'%(cresis_base_dir,cresis_type,frame,frame,data_base_dir+cresis_type));"
    ]
   },
   {
@@ -28,13 +77,16 @@
    "source": [
     "### Radar Image #1 - Same as in Figure 2 ###\n",
     "\n",
+    "# Load the data as an ImpDAR object\n",
     "dat1 = load('mcords_mat','../../data/radar/CSARP_standard/Data_img_02_20131227_12_001.mat')[0]\n",
     "dat1.get_projected_coords('epsg:3031')   \n",
+    "\n",
+    "# Get the CReSIS surface and bed pick times\n",
     "layers = loadmat('../../data/radar/CSARP_layerData/Data_20131227_12_001.mat')['layerData']\n",
     "b = layers[0][1][0][0][0][0][1][0][0][0][0]\n",
     "s = layers[0][0][0][0][0][0][1][0][0][0][0]\n",
     "\n",
-    "### Convert from pick time to sample number and then re-search for the peak bed power ###\n",
+    "# Convert from pick time to sample number and then re-search for the peak bed power\n",
     "bsamp1 = np.zeros_like(b)\n",
     "ssamp1 = np.zeros_like(b)\n",
     "p1 = np.empty_like(b)\n",
@@ -47,7 +99,7 @@
     "        bsamp1[trace] = b_idx\n",
     "        p1[trace] = np.max(dat1.data[b_idx-40:b_idx+40,trace])\n",
     "        \n",
-    "    ### Reset the trace so that the first sample is at the ice surface rather than the airplane (for plotting) ###\n",
+    "    # Reset the trace so that the first sample is at the ice surface rather than the airplane (for plotting)\n",
     "    if np.isnan(s[trace]):\n",
     "        s_idx = 1\n",
     "        ssamp1[trace] = np.nan\n",
@@ -69,12 +121,18 @@
    },
    "outputs": [],
    "source": [
+    "### Radar Image #2 - Same as in Figure 2 ###\n",
+    "\n",
+    "# Load the data as an ImpDAR object\n",
     "dat2 = load('mcords_mat','../../data/radar/CSARP_standard/Data_img_02_20131219_02_008.mat')[0]\n",
     "dat2.get_projected_coords('epsg:3031')    \n",
     "\n",
+    "# Get the CReSIS surface and bed pick times\n",
     "layers = loadmat('../../data/radar/CSARP_layerData/Data_20131219_02_008.mat')['layerData']\n",
     "b = layers[0][1][0][0][0][0][1][0][0][0][0]\n",
     "s = layers[0][0][0][0][0][0][1][0][0][0][0]\n",
+    "\n",
+    "# Convert from pick time to sample number and then re-search for the peak bed power\n",
     "bsamp2 = np.zeros_like(b)\n",
     "ssamp2 = np.zeros_like(b)\n",
     "p2 = np.empty_like(b)\n",
@@ -87,7 +145,7 @@
     "        bsamp2[trace] = b_idx\n",
     "        p2[trace] = np.max(dat2.data[b_idx-40:b_idx+40,trace])\n",
     "        \n",
-    "    ### Reset the trace so that the first sample is at the ice surface rather than the airplane (for plotting) ###\n",
+    "    # Reset the trace so that the first sample is at the ice surface rather than the airplane (for plotting)\n",
     "    if np.isnan(s[trace]):\n",
     "        s_idx = 1\n",
     "        ssamp2[trace] = np.nan\n",
@@ -97,7 +155,7 @@
     "    dat2.data[:-s_idx,trace] = dat2.data[s_idx:,trace]\n",
     "    dat2.data[-s_idx:,trace] = np.nan\n",
     "\n",
-    "### Adjust time and depth vectors for updated array ###\n",
+    "# Adjust time and depth vectors for updated array\n",
     "dat2.travel_time -= dat2.travel_time[0]\n",
     "depth2 = dat2.travel_time*169/2."
    ]
@@ -111,7 +169,8 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "### Plot the Figure ###\n",
+    "\n",
     "plt.figure(figsize=(8,4))\n",
     "\n",
     "#c = cm.magma(0.75)\n",
@@ -138,7 +197,7 @@
     "         bbox=dict(facecolor='w', edgecolor='k', pad=5.0, linewidth=1.5))\n",
     "\n",
     "t = 2500\n",
-    "xframe = 400\n",
+    "xframe = 300\n",
     "w = 100\n",
     "ax2 = plt.subplot(252)\n",
     "plt.axis('off')\n",
@@ -174,7 +233,7 @@
     "         bbox=dict(facecolor='w', edgecolor='k', pad=5.0, linewidth=1.5))\n",
     "\n",
     "t = 3070\n",
-    "xframe = 250\n",
+    "xframe = 200\n",
     "w = 25\n",
     "ax4 = plt.subplot(254)\n",
     "plt.axis('off')\n",
@@ -232,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.18"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
