--- a/figures/fig4-power-losses/plot-figure4-power-losses.ipynb
+++ b/figures/fig4-power-losses/plot-figure4-power-losses.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "94202108-c6da-4d7a-92f1-ba1cb17e71d3",
+   "metadata": {},
+   "source": [
+    "# Figure 4\n",
+    "\n",
+    "Simple models for radar power loss in glacial ice. Testing ideas for measured power suppression at active subglacial lakes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "430b7b20-4b07-4194-a55a-06c3eba9ebdd",
@@ -12,9 +22,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.gridspec import GridSpec\n",
-    "from matplotlib.collections import LineCollection\n",
     "\n",
+    "# Bessel function for surface scattering\n",
     "from scipy.special import i0\n",
+    "# for Mie scattering\n",
     "import miepython"
    ]
   },
@@ -29,18 +40,18 @@
    "source": [
     "### Surface Scattering ###\n",
     "\n",
-    "epsr_ice = 3.15\n",
-    "nice = np.sqrt(epsr_ice)\n",
-    "fc = 60e6\n",
-    "vice = 3e8/nice\n",
-    "λ = vice/fc\n",
+    "epsr_ice = 3.15   # ice permittivity\n",
+    "nice = np.sqrt(epsr_ice) # refractive index\n",
+    "fc = 300e6  # center frequency\n",
+    "vice = 3e8/nice # ice velocity\n",
+    "λ = vice/fc # wavelength\n",
     "\n",
-    "S = np.linspace(0,10.,100)\n",
-    "g = 4.*np.pi*S/λ\n",
-    "ρ_bed = np.exp(-g**2.)*i0(g**2./2.)**2.\n",
+    "S = np.linspace(0,10.,100)  # RMS surface roughness\n",
+    "g = 4.*np.pi*S/λ   # RMS phase variation\n",
+    "ρ_bed = np.exp(-g**2.)*i0(g**2./2.)**2. # power losses at the bed\n",
     "\n",
-    "g = 4.*np.pi*(S/λ)*(np.sqrt(epsr_ice)-1.)\n",
-    "ρ_surf = np.exp(-g**2.)*i0(g**2./2.)**2."
+    "g = 4.*np.pi*(S/λ)*(np.sqrt(epsr_ice)-1.) # RMS phase with refraction\n",
+    "ρ_surf = np.exp(-g**2.)*i0(g**2./2.)**2. # power losses at the surface"
    ]
   },
   {
@@ -54,22 +65,24 @@
    "source": [
     "### Volume Scattering ###\n",
     "\n",
-    "nwater = np.sqrt(80)\n",
-    "nsediment = np.sqrt(5.)\n",
+    "nwater = np.sqrt(80)  # refractive index of water\n",
+    "nsediment = np.sqrt(5.) # refractive index of sediment like granite\n",
     "\n",
-    "r = np.linspace(0.00001,.25,100)\n",
-    "x = 2.*np.pi*r/λ\n",
+    "r = np.linspace(0.00001,.25,100) # particle radius\n",
+    "x = 2.*np.pi*r/λ # \n",
     "\n",
-    "m = nwater/nice\n",
-    "qext, q_water, qback, g = miepython.mie(m, x)\n",
-    "ϕ = np.array([.1,.3])\n",
-    "τ = (ϕ[0]/(4./3.*r), ϕ[1]/(4./3.*r))*q_water\n",
-    "L_water = 10.*np.log10(np.exp(2.*τ))\n",
+    "# Water Particles #\n",
+    "m = nwater/nice # relative refractive index\n",
+    "qext, q_water, qback, g = miepython.mie(m, x) # Mie scattering model\n",
+    "ϕ = np.array([.1,.3]) # porosity\n",
+    "τ = (ϕ[0]/(4./3.*r), ϕ[1]/(4./3.*r))*q_water # power losses for each porosity\n",
+    "L_water = 10.*np.log10(np.exp(2.*τ)) # log power losses\n",
     "\n",
-    "m = nsediment/nice\n",
-    "qext, q_sediment, qback, g = miepython.mie(m, x)\n",
-    "τ = (ϕ[0]/(4./3.*r), ϕ[1]/(4./3.*r))*q_sediment\n",
-    "L_sediment = 10.*np.log10(np.exp(2.*τ))"
+    "# Sedimetn Particles #\n",
+    "m = nsediment/nice # relative refractive index\n",
+    "qext, q_sediment, qback, g = miepython.mie(m, x) # Mie scattering model\n",
+    "τ = (ϕ[0]/(4./3.*r), ϕ[1]/(4./3.*r))*q_sediment # power losses for each porosity\n",
+    "L_sediment = 10.*np.log10(np.exp(2.*τ)) # log power losses"
    ]
   },
   {
@@ -83,20 +96,18 @@
    "source": [
     "### Thermal Attenuation ###\n",
     "\n",
-    "T0 = 273.5\n",
-    "Ts = T0 + np.linspace(-30,0,1000)\n",
+    "T0 = 273.5 # T0 for Kelvin conversion\n",
+    "Ts = T0 + np.linspace(-30,0,1000) # range of temperatures\n",
     "\n",
     "# MacGregor 2007\n",
-    "σ0 = 7.2\n",
-    "σvar = 3.1\n",
-    "E0 = .55\n",
-    "Evar = .05\n",
-    "k = 8.6173303e-5\n",
-    "Tr = 251.\n",
-    "σ = σ0*np.exp(E0/k*(1./Tr-1./Ts))\n",
+    "σ0 = 7.2 # conductivity\n",
+    "E0 = .55 # activation energy\n",
+    "k = 8.6173303e-5 # Boltzmann constant\n",
+    "Tr = 251. # reference temperature\n",
+    "σ = σ0*np.exp(E0/k*(1./Tr-1./Ts)) # Arrhenius conductivity model\n",
     "\n",
     "# Winebrenner (2003)\n",
-    "N_temp = 0.912*σ"
+    "N_temp = 0.912*σ # Attenuation rate"
    ]
   },
   {
@@ -108,19 +119,21 @@
    },
    "outputs": [],
    "source": [
-    "### Water Attenuation ###\n",
+    "### Water Attenuation (Geldsetzer et al., 2009; Kendrick et al., 2018) ###\n",
     "\n",
-    "ϕs = np.linspace(0.0,0.3,100)\n",
-    "y = 1.67\n",
-    "ϕc = 0.0\n",
+    "ϕs = np.linspace(0.0,0.3,100) # range of porosities\n",
+    "y = 1.67 # degree of conductivity dependence on porosity\n",
+    "ϕc = 0.0 # connectivity between powers\n",
     "\n",
-    "σw1 = 530\n",
-    "σws1 = σw1*(ϕs)**y+σ0*(1.-ϕs)*np.exp(E0/k*(1./Tr-1./T0))\n",
-    "N_high = 0.912*σws1\n",
+    "# Low conductivity water\n",
+    "σw1 = 530 # source water conductivity (low)\n",
+    "σws1 = σw1*(ϕs)**y + σ0*(1.-ϕs)*np.exp(E0/k*(1./Tr-1./T0))\n",
+    "N_high = 0.912*σws1 # Attenuation rate\n",
     "\n",
-    "σw2 = 72000\n",
-    "σws2 = σw2*(ϕs)**y+σ0*(1.-ϕs)*np.exp(E0/k*(1./Tr-1./T0))\n",
-    "N_low = 0.912*σws2"
+    "# High conductivity water\n",
+    "σw2 = 72000 # source water conductivity (high)\n",
+    "σws2 = σw2*(ϕs)**y + σ0*(1.-ϕs)*np.exp(E0/k*(1./Tr-1./T0))\n",
+    "N_low = 0.912*σws2 # Attenuation rate"
    ]
   },
   {
@@ -134,7 +147,6 @@
    "source": [
     "fig = plt.figure(figsize=(12,3))\n",
     "gs = GridSpec(2,4)\n",
-    "\n",
     "\n",
     "### Surface Scattering ###\n",
     "\n",
@@ -229,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.2"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
