--- a/figures/supplementary/plot-radargrams.ipynb
+++ b/figures/supplementary/plot-radargrams.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dd7da8f7-bd94-40de-bcb7-761865e0b9ec",
+   "metadata": {},
+   "source": [
+    "# Supplementary Radar Images\n",
+    "\n",
+    "Additional images from Whillans Ice Plain. Data may need to be downloaded from CReSIS server (see notebooks for Figures 2 and 3).\n",
+    "Unfortunately this does not loop well since there are customizations to each image.\n",
+    "\n",
+    "The data are publicly available at https://data.cresis.ku.edu/data/rds/2013_Antarctica_Basler."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d8483574-9054-42da-a684-d645f864deb9",
@@ -11,7 +24,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import glob, h5py\n",
+    "import glob, h5py, os\n",
     "from scipy.io import loadmat\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -32,7 +45,12 @@
    "source": [
     "### Load the processed reflectivity dataframe ###\n",
     "\n",
-    "df = pd.read_csv('../../proc/Processed_Reflectivity.csv')"
+    "# If the previous notebook has not been run to get bed-echo power download it from Zenodo\n",
+    "fn = '../../proc/Processed_Reflectivity.csv'\n",
+    "if not os.path.exists(fn):\n",
+    "    os.system('wget -L https://zenodo.org/records/11201199/files/Picked_Bed_Power.csv -O ../../proc/Processed_Reflectivity.csv');\n",
+    "# Read as pandas dataframe\n",
+    "df = pd.read_csv(fn)"
    ]
   },
   {
@@ -75,15 +93,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2deade00-70d5-4fd5-ae71-cc31017bece8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Set up the data directories ###\n",
+    "\n",
+    "# a base directory where I keep data to be loaded below\n",
+    "data_dir = os.getenv('DATAHOME')\n",
+    "# quick error check to make sure $DATAHOME is set\n",
+    "if data_dir is None:\n",
+    "    raise OSError('environment variable $DATAHOME does not exist')\n",
+    "\n",
+    "cresis_siple_dir = 'airborne-radar/cresis/siple-coast/'\n",
+    "standard_dir = data_dir + cresis_siple_dir + 'CSARP_standard/'\n",
+    "layer_dir = data_dir + cresis_siple_dir + 'CSARP_layerData/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "31178015-86a1-4bc2-ba68-4582166e56ef",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "base_dir = '/Users/benhills/Desktop/cresis/data.cresis.ku.edu/data/rds/2013_Antarctica_Basler/'\n",
-    "standard_dir = base_dir + 'CSARP_standard/'\n",
-    "layer_dir = base_dir + 'CSARP_layerData/'\n",
     "dname = standard_dir + '20140108_02'\n",
     "fnames = glob.glob(dname+'/*img_02*.mat')\n",
     "if len(fnames) == 0:\n",
@@ -635,20 +670,6 @@
     "    i -= 1\n",
     "    ddist = lake_dists[i] - lake_dists[i+1]\n",
     "lake_end = i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f317169a-56b1-4466-95a9-d2e657f48f06",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.plot(lake_dists)\n",
-    "plt.axvline(lake_start)\n",
-    "plt.axvline(lake_end)\n",
-    "plt.ylim(0,1000)"
    ]
   },
   {
@@ -1592,372 +1613,6 @@
     "plt.tight_layout()\n",
     "plt.savefig('fig-S2-8.png',dpi=300)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1d684da-c855-49bf-a5f8-53485fd81c39",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3a82be1-304d-4788-b12b-4f895c1bc27f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a5d3b8c-10e0-462c-8c49-6974a9a3b8d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68c390e6-4e1e-476d-9d7c-5635318b26f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d061cd12-fff0-4c2a-8a2c-30c8cf7778a8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f1cff40-8e7e-421a-a0cb-67acc78b78cf",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(8,8))\n",
-    "ax1 = plt.subplot(311)\n",
-    "plt.scatter(dist1,nsp1,c=nsp1,cmap='magma',s=1,vmin=-140,vmax=-110)\n",
-    "plt.ylim(-170,-110)\n",
-    "plt.yticks([-140,-130,-120])\n",
-    "plt.ylabel('Near-Surface Backscatter (dB)')\n",
-    "axt1 = plt.twinx(ax1)\n",
-    "plt.scatter(dist1,r_rel1,c=r_rel1,cmap='magma',s=1,vmin=-20,vmax=20)\n",
-    "plt.ylim(-15,45)\n",
-    "plt.yticks([-10,0,10,20])\n",
-    "plt.ylabel('Relative Bed Reflectivity (dB)')\n",
-    "\n",
-    "ax1 = plt.subplot(312)\n",
-    "plt.scatter(dist2,nsp2,c=nsp2,cmap='magma',s=1,vmin=-140,vmax=-110)\n",
-    "plt.ylim(-170,-110)\n",
-    "plt.yticks([-140,-130,-120])\n",
-    "plt.ylabel('Near-Surface Backscatter (dB)')\n",
-    "axt1 = plt.twinx(ax1)\n",
-    "plt.scatter(dist2,r_rel2,c=r_rel2,cmap='magma',s=1,vmin=-20,vmax=20)\n",
-    "plt.ylim(-15,45)\n",
-    "plt.yticks([-10,0,10,20])\n",
-    "plt.ylabel('Relative Bed Reflectivity (dB)')\n",
-    "\n",
-    "ax1 = plt.subplot(313)\n",
-    "plt.scatter(dist3,nsp3,c=nsp3,cmap='magma',s=1,vmin=-140,vmax=-110)\n",
-    "plt.ylim(-170,-110)\n",
-    "plt.yticks([-140,-130,-120])\n",
-    "plt.ylabel('Near-Surface Backscatter (dB)')\n",
-    "axt1 = plt.twinx(ax1)\n",
-    "plt.scatter(dist3,r_rel3,c=r_rel3,cmap='magma',s=1,vmin=-20,vmax=20)\n",
-    "plt.ylim(-15,45)\n",
-    "plt.yticks([-10,0,10,20])\n",
-    "plt.ylabel('Relative Bed Reflectivity (dB)')\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.savefig('fig-S2-7.png',dpi=300)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c63a9a0-b0cf-47c7-bd2e-8ddea4eb4efa",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#standard_dir = '/Volumes/Amphitryon/cresis/Whillans/CSARP_standard/'\n",
-    "#layer_dir = '/Volumes/Amphitryon/cresis/Whillans/CSARP_layerData/'\n",
-    "\n",
-    "dname = standard_dir + '20140108_05'\n",
-    "fname = dname + '/Data_20140108_05_003.mat'\n",
-    "dat = load('mcords_mat',fname)[0]\n",
-    "dat.get_projected_coords('epsg:3031')    \n",
-    "\n",
-    "layers = loadmat(layer_dir+dname[len(standard_dir):]+'/Data'+fname[-20:])['layerData']\n",
-    "b = layers[0][1][0][0][0][0][1][0][0][0][0]\n",
-    "s = layers[0][0][0][0][0][0][1][0][0][0][0]\n",
-    "bsamp = np.zeros_like(b)\n",
-    "ssamp = np.zeros_like(s)\n",
-    "p = np.empty_like(b)\n",
-    "for trace in range(dat.tnum):\n",
-    "    if np.isnan(b[trace]):\n",
-    "        bsamp[trace] = np.nan\n",
-    "        p[trace] = np.nan\n",
-    "    else:\n",
-    "        b_idx = np.argmin(abs(b[trace]-dat.travel_time*1e-6))\n",
-    "        bsamp[trace] = b_idx\n",
-    "    p[trace] = np.max(dat.data[b_idx-50:b_idx+50,trace])\n",
-    "    ### Reset the trace so that the first sample is at the ice surface rather than the airplane (for plotting) ###\n",
-    "    if np.isnan(s[trace]):\n",
-    "        s_idx = 1\n",
-    "        ssamp[trace] = np.nan\n",
-    "    else:\n",
-    "        s_idx = np.argmin(abs(s[trace]-dat.travel_time*1e-6))\n",
-    "        ssamp[trace] = s_idx\n",
-    "    dat.data[:-s_idx,trace] = dat.data[s_idx:,trace]\n",
-    "    dat.data[-s_idx:,trace] = np.nan\n",
-    "        \n",
-    "### Correct the bed power for spreading and attenuative losses ###\n",
-    "epsr_ice = 3.15\n",
-    "H = (b-s)*169e6/2.\n",
-    "h = s*300e6\n",
-    "G = 20*np.log10(2.*(h + H/np.sqrt(epsr_ice)))\n",
-    "N = 10\n",
-    "L = 2*N*H/1000.\n",
-    "r_rel = p + G + L\n",
-    "r_rel -= np.nanmean(r_rel)\n",
-    "\n",
-    "### Adjust time and depth vectors for updated array ###\n",
-    "dat.travel_time -= dat.travel_time[0]\n",
-    "depth = dat.travel_time*169/2.\n",
-    "\n",
-    "### Linear gain for plotting ###\n",
-    "dat.data += np.transpose(np.tile(np.linspace(0,20,dat.snum),(dat.tnum,1)))\n",
-    "\n",
-    "dat.elev = np.nan*np.ones(dat.tnum)\n",
-    "dat.reverse()\n",
-    "r_rel = r_rel[::-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fc63f06-2910-408f-a3b4-cffe5d2c315f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib widget\n",
-    "\n",
-    "plt.figure(figsize=(7,7))\n",
-    "gs = GridSpec(4,4)\n",
-    "\n",
-    "start = 180\n",
-    "end = 950\n",
-    "bound_color='cyan'\n",
-    "\n",
-    "### Panel A - Map View ###\n",
-    "\n",
-    "ax1 = plt.subplot(gs[0,0])\n",
-    "#ax1.tick_params(labelleft=False,labelbottom=False,left=False,bottom=False)\n",
-    "gl_df[gl_df['Id_text']=='Grounded ice or land'].plot(ax=ax1)\n",
-    "plt.scatter(df['X'],df['Y'],c=df['Relative Reflectivity'],zorder=1,cmap='magma',s=.1,vmin=-20,vmax=20,rasterized=True)\n",
-    "plt.fill_between(np.linspace(-1e8,1e8,10),-1e8,1e8,color='w',alpha=0.5)\n",
-    "plt.scatter(dat.x_coord,dat.y_coord,c=r_rel,s=1,zorder=2,cmap='magma',vmin=-20,vmax=20,rasterized=True)\n",
-    "lake = 'EngelhardtSubglacialLake'\n",
-    "plt.plot(np.squeeze(h5f[lake]['x'][:]),np.squeeze(h5f[lake]['y'][:]),c=bound_color,zorder=3)\n",
-    "plt.axis('equal')\n",
-    "plt.xlim(-300000,-220000)\n",
-    "plt.ylim(-690000,-600000)\n",
-    "ax1.text(0.8,.75,'A',transform=ax1.transAxes,fontweight='bold',fontsize=12,\n",
-    "         bbox=dict(facecolor='w', edgecolor='k', pad=5.0, linewidth=1.5))\n",
-    "\n",
-    "### Panel B - Ice Surface through Time ###\n",
-    "\n",
-    "radar_decyr = 2014+8/365.\n",
-    "ax2 = plt.subplot(gs[0,1:])\n",
-    "plt.plot(sle_y,sle_in-sle_out,'k-o',mfc='w',ms=3.5)\n",
-    "plt.arrow(radar_decyr,1.5,0,-.5,color='k',width=0.025)\n",
-    "ax2.xaxis.tick_top()\n",
-    "ax2.xaxis.set_label_position(\"top\")\n",
-    "ax2.yaxis.tick_right()\n",
-    "ax2.yaxis.set_label_position(\"right\")\n",
-    "ax2.text(0.05,.75,'B',transform=ax2.transAxes,fontweight='bold',fontsize=12,\n",
-    "         bbox=dict(facecolor='w', edgecolor='k', pad=5.0, linewidth=1.5))\n",
-    "plt.ylabel('Surface Anomaly (m)')\n",
-    "\n",
-    "### Panel C - Radar Image ###\n",
-    "\n",
-    "ax3 = plt.subplot(gs[1:3,:])\n",
-    "ax3.tick_params(labelbottom=False)\n",
-    "plt.imshow(dat.data,aspect='auto',vmin=-165,vmax=-100,cmap='magma',\n",
-    "          extent=[0,np.max(dat.dist),max(depth),min(depth)],rasterized=True)\n",
-    "plt.ylim(1100,0)\n",
-    "plt.ylabel('Depth (m)')\n",
-    "ax3.text(0.035,.875,'C',transform=ax3.transAxes,fontweight='bold',fontsize=12,\n",
-    "         bbox=dict(facecolor='w', edgecolor='k', pad=5.0, linewidth=1.5))\n",
-    "\n",
-    "### Panel D - Bed Echo Power ###\n",
-    "\n",
-    "ax4 = plt.subplot(gs[3,:],sharex=ax3)\n",
-    "plt.scatter(dat.dist,r_rel,c=r_rel,vmin=-20,vmax=20,s=2,rasterized=True,cmap='magma')\n",
-    "plt.ylabel('Rel. Reflectivity (dB)')\n",
-    "plt.xlabel('Distance (km)')\n",
-    "ax4.text(0.035,.75,'D',transform=ax4.transAxes,fontweight='bold',fontsize=12,\n",
-    "         bbox=dict(facecolor='w', edgecolor='k', pad=5.0, linewidth=1.5))\n",
-    "plt.ylim(-30,30)\n",
-    "\n",
-    "### Cleanup and Save ###\n",
-    "plt.tight_layout()\n",
-    "#plt.savefig('fig-S2-6.png',dpi=300)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4041f662-f57e-41e4-b9fd-b8a826a9cdb8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import geopandas as gpd\n",
-    "# Scripps Grounding Line\n",
-    "gl = '/Volumes/Amphitryon/continental-data-products/grounding-line/scripps/scripps_antarctica_polygons_v1.shp' \n",
-    "#gl = '../../data/outlines/grounding-line/GroundingLine_Antarctica_v02./scripps_antarctica_polygons_v1.shp' \n",
-    "gl_df = gpd.read_file(gl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "334dfbd0-2eed-4629-8ddd-971f2c6f735f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df['S'] = df['Elevation'] - df['h']\n",
-    "df['B'] = df['S'] - df['H']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc996647-4d67-4978-b8e2-a3f8ace7b437",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "g = 9.81\n",
-    "rhoi = 917.\n",
-    "rhow = 1000.\n",
-    "ϕ = rhow*g*df['B'].values + rhoi*g*df['H'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8152502-f2ba-4b2b-9326-5957832ca09c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ϕ/1e6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c60f45a-9fa9-4371-8bb2-44f10c3cbb24",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10,8))\n",
-    "\n",
-    "ax1 = plt.subplot(221)\n",
-    "gl_df[gl_df['Id_text']=='Grounded ice or land'].plot(ax=ax1)\n",
-    "plt.scatter(df['X'],df['Y'],c=df['Relative Reflectivity'],zorder=1,cmap='magma',s=.1,vmin=-20,vmax=20,rasterized=True)\n",
-    "plt.colorbar(label='Relative Reflectivity')\n",
-    "plt.axis('equal')\n",
-    "plt.xlim(-270000,-220000)\n",
-    "plt.ylim(-680000,-650000)\n",
-    "\n",
-    "ax2 = plt.subplot(222)\n",
-    "gl_df[gl_df['Id_text']=='Grounded ice or land'].plot(ax=ax2)\n",
-    "plt.scatter(df['X'],df['Y'],c=df['B'],zorder=1,cmap='magma',s=.1,vmin=-650,vmax=-450,rasterized=True)\n",
-    "plt.colorbar(label='Ice Bed Elevation')\n",
-    "plt.axis('equal')\n",
-    "plt.xlim(-270000,-220000)\n",
-    "plt.ylim(-680000,-650000)\n",
-    "\n",
-    "ax3 = plt.subplot(223)\n",
-    "gl_df[gl_df['Id_text']=='Grounded ice or land'].plot(ax=ax3)\n",
-    "plt.scatter(df['X'],df['Y'],c=df['H'],zorder=1,cmap='magma',s=.1,vmin=400,vmax=700,rasterized=True)\n",
-    "plt.colorbar(label='Ice Thickness')\n",
-    "plt.axis('equal')\n",
-    "plt.xlim(-270000,-220000)\n",
-    "plt.ylim(-680000,-650000)\n",
-    "\n",
-    "ax4 = plt.subplot(224)\n",
-    "gl_df[gl_df['Id_text']=='Grounded ice or land'].plot(ax=ax4)\n",
-    "plt.scatter(df['X'],df['Y'],c=ϕ/1e6,zorder=1,cmap='magma',s=.1,vmin=-.3,vmax=.2,rasterized=True)\n",
-    "plt.colorbar(label='Hydropotential (MPa)')\n",
-    "plt.axis('equal')\n",
-    "plt.xlim(-270000,-220000)\n",
-    "plt.ylim(-680000,-650000)\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "#\"\"\";"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b95afb1b-a279-463a-b34f-71c004f7c0f2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "SAkm = 361e6 # km2\n",
-    "SA = SAkm*1000**2.\n",
-    "\n",
-    "DEkm = 1.2\n",
-    "DE = DEkm*1000**3.\n",
-    "\n",
-    "print(DE/SA,'m')\n",
-    "print(DEkm/SAkm,'km')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39e88aa5-cda9-4417-9c8d-c9bf1a7a5187",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "gl_df[0].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b0049ae-2ca6-4f2b-8403-b97f3b2eb791",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1976,7 +1631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.18"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
