--- a/proc/process-reflectivity.ipynb
+++ b/proc/process-reflectivity.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d409d2a5-20c6-4e9e-9562-6961753a56e2",
+   "metadata": {},
+   "source": [
+    "# Bed Reflectivity Calculation\n",
+    "\n",
+    "Now, take the raw bed-echo power, calculated in ./get-bed-power.ipynb, and use that to calculate a more 'physical' field for the bed reflectivity. This includes levelling the power at crossover points and correcting for spreading and attenuation losses.\n",
+    "\n",
+    "We also sort the traces by location into 'grounded', 'ungrounded', and by the known subglacial lakes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a2237c5d-c458-4329-8188-381285596c4e",
@@ -9,17 +21,13 @@
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.path as mplPath\n",
+    "### Standard Imports ###\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import os\n",
     "\n",
-    "import h5py, json\n",
-    "from osgeo import ogr\n",
-    "\n",
-    "from pyproj import Proj\n",
-    "proj_stere = Proj('epsg:3031')\n",
-    "\n",
+    "import matplotlib.pyplot as plt\n",
     "%matplotlib widget"
    ]
   },
@@ -32,9 +40,14 @@
    },
    "outputs": [],
    "source": [
-    "### Load the bed pick dataframe ###\n",
+    "### Get the bed pick dataframe ###\n",
     "\n",
-    "df = pd.read_csv('../../proc/Picked_Bed_Power.csv')"
+    "# If the previous notebook has not been run to get bed-echo power download it from Zenodo\n",
+    "fn = './Picked_Bed_Power.csv'\n",
+    "if not os.path.exists(fn):\n",
+    "    os.system('wget -L https://zenodo.org/records/11201199/files/Picked_Bed_Power.csv')\n",
+    "# Read as pandas dataframe\n",
+    "df = pd.read_csv('./Picked_Bed_Power.csv')"
    ]
   },
   {
@@ -52,7 +65,7 @@
     "fdays = np.sort(df['Flight Day'].unique())\n",
     "\n",
     "# Kamb flight days\n",
-    "kamb_days = fdays[[1,3,4,7]]  #4\n",
+    "kamb_days = fdays[[1,3,4,7]]\n",
     "# Whillans flight days\n",
     "whillans_days = np.delete(fdays,[1,3,4,7])\n",
     "\n",
@@ -73,24 +86,6 @@
     "\n",
     "# Empty array for adjusted bed power\n",
     "df['P_bed_adj'] = df['P_bed'].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3def22ad-f3f4-4dd5-8be3-a1ba9d0d2167",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Plot to check that the days are correct\n",
-    "plt.figure(figsize=(4,3))\n",
-    "ax = plt.subplot(111)\n",
-    "kamb_df.plot.scatter(ax=ax,x='X',y='Y',c='lightblue',s=1)\n",
-    "df.plot.scatter(ax=ax,x='X',y='Y',c='b',s=1)\n",
-    "ax.axis('equal')\n",
-    "plt.tight_layout()"
    ]
   },
   {
@@ -137,42 +132,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e9b2e77-33e2-41c3-9d04-215f902f8813",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "### Do the crossover power adjustment for each day ###\n",
-    "\n",
-    "# Add days in a specific order to maximize crossover points\n",
-    "day_order = [20131219, 20131223, 20140108, 20140104, 20140109, 20131231, 20140111, 20131227, 20140102]\n",
-    "\n",
-    "# Initialize the figures and colors to plot for each day\n",
-    "plt.figure()\n",
-    "prop_cycle = plt.rcParams['axes.prop_cycle']\n",
-    "colors = prop_cycle.by_key()['color']\n",
-    "\n",
-    "for i in range(1,2):\n",
-    "    # Do the adjustment for each day, using the function from the previous cell\n",
-    "    print(\"Crossover Leveling Adjustment #\",i)\n",
-    "    print(\"Control Days:\",np.delete(whillans_days,i))\n",
-    "    print(\"Adjusted Days:\",whillans_days[i])\n",
-    "    df, dP = crossover_leveling(df,'P_bed',np.delete(whillans_days,i),[whillans_days[i]],crossover_dist=50,print_num=10000,verbose=True)\n",
-    "    print(\"\\n\")\n",
-    "    \n",
-    "    # Plot a histogram of power difference at crossover points\n",
-    "    plt.hist(-dP,bins=len(dP)//100,color=colors[i],alpha=0.25)\n",
-    "    plt.axvline(-np.nanmean(dP),color=colors[i])\n",
-    "    \n",
-    "plt.ylim(0,1000)\n",
-    "plt.xlabel('Crossover Power (dB)')\n",
-    "plt.ylabel('Number of Traces')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "42bc17e0-cdbb-462e-841a-fde5d2586a61",
    "metadata": {
     "tags": []
@@ -180,6 +139,8 @@
    "outputs": [],
    "source": [
     "### Do the crossover power adjustment for each day ###\n",
+    "\n",
+    "crossover_variable = 'P_surf'\n",
     "\n",
     "# Initialize the figures and colors to plot for each day\n",
     "plt.figure()\n",
@@ -191,73 +152,20 @@
     "    print(\"Crossover Leveling Adjustment #\",i)\n",
     "    print(\"Control Days:\",np.delete(whillans_days,i))\n",
     "    print(\"Adjusted Days:\",whillans_days[i])\n",
-    "    df, dP = crossover_leveling(df,'P_surf',np.delete(whillans_days,i),[whillans_days[i]],crossover_dist=50,print_num=10000,verbose=True)\n",
+    "    df, dP = crossover_leveling(df,crossover_variable,np.delete(whillans_days,i),[whillans_days[i]],crossover_dist=50,print_num=10000,verbose=True)\n",
     "    print(\"\\n\")\n",
     "    \n",
     "    # Plot a histogram of power difference at crossover points\n",
-    "    plt.hist(-dP,bins=len(dP)//100,color=colors[i],alpha=0.25)\n",
+    "    plt.hist(-dP,bins=len(dP)//100,color=colors[i],alpha=0.25,label=whillans_days[i])\n",
     "    plt.axvline(-np.nanmean(dP),color=colors[i])\n",
-    "    \n",
-    "plt.ylim(0,1000)\n",
-    "plt.xlabel('Crossover Power (dB)')\n",
-    "plt.ylabel('Number of Traces')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e056b43-cb49-4af4-b84e-35d4159c711e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "### Do the crossover power adjustment for each day ###\n",
     "\n",
+    "# Save a variable for the adjusted surface power\n",
     "df['P_surf_adj'] = df['P_surf'] + (df['P_bed_adj'] - df['P_bed'])\n",
     "\n",
-    "# Initialize the figures and colors to plot for each day\n",
-    "plt.figure()\n",
-    "prop_cycle = plt.rcParams['axes.prop_cycle']\n",
-    "colors = prop_cycle.by_key()['color']\n",
-    "\n",
-    "for i in range(1):\n",
-    "    # Do the adjustment for each day, using the function from the previous cell\n",
-    "    print(\"Crossover Leveling Adjustment #\",i)\n",
-    "    print(\"Control Days:\",np.delete(whillans_days,i))\n",
-    "    print(\"Adjusted Days:\",whillans_days[i])\n",
-    "    df, dP = crossover_leveling(df,'P_bed_adj',np.delete(whillans_days,i),[whillans_days[i]],crossover_dist=50,print_num=10000,verbose=True)\n",
-    "    print(\"\\n\")\n",
-    "    \n",
-    "    # Plot a histogram of power difference at crossover points\n",
-    "    plt.hist(-dP,bins=len(dP)//100,color=colors[i],alpha=0.25)\n",
-    "    plt.axvline(-np.nanmean(dP),color=colors[i])\n",
-    "    \n",
     "plt.ylim(0,1000)\n",
     "plt.xlabel('Crossover Power (dB)')\n",
-    "plt.ylabel('Number of Traces')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d44d344-02e3-4453-9cb7-6320a93523fb",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "### Recalculate the crossover power for the adjusted dataset, on all days ###\n",
-    "### Make sure Surface Time is centered on 0 ###\n",
-    "\n",
-    "df_hold, dP = crossover_leveling(df,day_order[:4],day_order[4:],print_num=50000,verbose=True)\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.hist(dP,bins=200)\n",
-    "plt.axvline(0,color='k')\n",
-    "plt.title('After Adjustment')\n",
-    "plt.xlabel('Crossover Power (dB)')\n",
-    "plt.ylabel('Number of Traces')"
+    "plt.ylabel('Number of Traces')\n",
+    "plt.legend(title='Flight Day',fontsize=8)"
    ]
   },
   {
@@ -269,12 +177,16 @@
    },
    "outputs": [],
    "source": [
+    "### Plot the adjusted power by day ###\n",
+    "\n",
     "plt.figure(figsize=(10,4))\n",
     "\n",
+    "# Map view plot\n",
     "ax1 = plt.subplot(121)\n",
     "for i in range(9):\n",
     "    df[df['Flight Day']==whillans_days[i]].plot.scatter(ax=ax1,x='X',y='Y',c=colors[i],s=1,label=whillans_days[i])\n",
     "\n",
+    "# Histogram\n",
     "ax2 = plt.subplot(122)\n",
     "bins = np.arange(-160,-70,0.1)\n",
     "plt.hist(df['P_bed_adj'],bins=bins,color='lightgrey');\n",
@@ -294,17 +206,21 @@
    "source": [
     "### Calculate a relative reflectivity ###\n",
     "\n",
+    "# ice permittivity\n",
+    "epsr_ice = 3.15\n",
+    "# geometric spreading losses (spherical)\n",
     "G = 20*np.log10(2.*(df['h'] + df['H']/np.sqrt(epsr_ice)))\n",
     "\n",
-    "# Attenuation\n",
-    "N = 10 # one-way rate (dB/km)\n",
-    "L = 2.*N * df['H']/1000.\n",
+    "# Attenuation correction\n",
+    "N = 10                   # one-way rate (dB/km)\n",
+    "L = 2.*N * df['H']/1000. # total attenuative losses\n",
     "\n",
     "# Reflectivity\n",
     "df['Relative Reflectivity'] = df['P_bed_adj'] + G + L\n",
     "# Move the mean to 0\n",
     "df['Relative Reflectivity'] -= df['Relative Reflectivity'].mean()\n",
     "\n",
+    "### Plot the output reflectivity field ###\n",
     "\n",
     "plt.figure(figsize=(6,5))\n",
     "\n",
@@ -325,21 +241,31 @@
    },
    "outputs": [],
    "source": [
-    "### Import InSAR grounding line and create a mask for traces grounded/floating ###\n",
+    "### Import Scripps grounding line and create a mask for traces grounded/floating ###\n",
     "\n",
-    "file = ogr.Open(\"/Users/bhills/Drive/Research/Maps/antarctica/Outlines/5000001062176/128409163/GroundingLine_Antarctica_v02.shp\")\n",
-    "shape = file.GetLayer(0)\n",
-    "feature = shape.GetFeature(0) #first feature of the shapefile\n",
-    "gls = json.loads(feature.ExportToJson())['geometry']['coordinates']\n",
-    "gl_coords = np.empty((0,2))\n",
-    "for gl in gls:\n",
-    "    gl_coords = np.append(gl_coords,gl[0],axis=0)\n",
-    "    \n",
-    "start = 35000\n",
-    "end = 38000\n",
+    "import json\n",
+    "from osgeo import ogr\n",
+    "import matplotlib.path as mplPath\n",
+    "import geopandas as gpd\n",
+    "\n",
+    "# a base directory where I keep data to be loaded below\n",
+    "data_dir = os.getenv('DATAHOME')\n",
+    "# quick error check to make sure $DATAHOME is set\n",
+    "if data_dir is None:\n",
+    "    raise OSError('environment variable $DATAHOME does not exist')\n",
+    "\n",
+    "# Scripps Grounding Line\n",
+    "gl = data_dir + 'continental-data-products/antarctica/grounding-line/scripps/scripps_antarctica_polygons_v1.shp' \n",
+    "gl_df = gpd.read_file(gl)\n",
+    "gl_coords = np.transpose(gl_df.iloc[1010].geometry.exterior.coords.xy)\n",
+    "\n",
+    "# Crop to the Whillans Ice Plain region\n",
+    "start = 46000\n",
+    "end = start+3000\n",
     "gl_crop = gl_coords[start:end]\n",
     "gl_crop = np.append(gl_crop,np.array([[-1000000,0],[1000000,0],gl_crop[0]]),axis=0)\n",
     "\n",
+    "# Label the radar points as grounded or not\n",
     "gl_Path = mplPath.Path(np.transpose([gl_crop[:,0],gl_crop[:,1]]))\n",
     "df['Grounded'] = gl_Path.contains_points(df[['X','Y']]).astype(bool)"
    ]
@@ -355,12 +281,15 @@
    "source": [
     "### Import lake outlines and create a mask for traces lake/not-lake ###\n",
     "\n",
+    "import h5py\n",
+    "\n",
     "# Subglacial lake outlines (Siegfried & Fricker, 2018)\n",
-    "lakes = h5py.File('../../data/outlines/SiegfriedFricker2018-outlines.h5', 'r')\n",
+    "lakes = h5py.File('../data/outlines/SiegfriedFricker2018-outlines.h5', 'r')\n",
     "wh_lake_keys = ['EngelhardtSubglacialLake', 'WhillansSubglacialLake', 'Whillans_6', 'Whillans_7', 'Whillans_8','Lake78','Lake10']\n",
     "\n",
+    "# empty column to be filled\n",
     "df['Lake'] = np.zeros_like(df['X']).astype(bool)\n",
-    "\n",
+    "# loop through all lake keys\n",
     "for key in wh_lake_keys:\n",
     "    lake_x = np.squeeze(lakes[key]['x'][:])\n",
     "    lake_y = np.squeeze(lakes[key]['y'][:])\n",
@@ -378,8 +307,11 @@
    },
    "outputs": [],
    "source": [
+    "### Plot the relative reflectivity from each of the spatially sorted fields ###\n",
+    "\n",
     "plt.figure(figsize=(12,3))\n",
     "\n",
+    "# Grounded\n",
     "ax1 = plt.subplot(131)\n",
     "df[df['Grounded']==True].plot.scatter(ax=ax1,x='X',y='Y',c='Relative Reflectivity',cmap='magma',s=1,vmin=-25,vmax=15)\n",
     "plt.plot(gl_crop[:,0],gl_crop[:,1],'k-')\n",
@@ -387,6 +319,7 @@
     "plt.xlim(-300000,-100000)\n",
     "plt.ylim(-800000,-500000)\n",
     "\n",
+    "# Subglacial Lake\n",
     "ax2 = plt.subplot(132)\n",
     "df[df['Lake']==True].plot.scatter(ax=ax2,x='X',y='Y',c='Relative Reflectivity',cmap='magma',s=1,vmin=-25,vmax=15)\n",
     "plt.plot(gl_crop[:,0],gl_crop[:,1],'k-')\n",
@@ -394,6 +327,7 @@
     "plt.xlim(-300000,-100000)\n",
     "plt.ylim(-800000,-500000)\n",
     "\n",
+    "# Not Grounded (Ice Shelf)\n",
     "ax3 = plt.subplot(133)\n",
     "df[df['Grounded']==False].plot.scatter(ax=ax3,x='X',y='Y',c='Relative Reflectivity',cmap='magma',s=1,vmin=-25,vmax=15)\n",
     "plt.plot(gl_crop[:,0],gl_crop[:,1],'k-')\n",
@@ -401,6 +335,7 @@
     "plt.xlim(-300000,-100000)\n",
     "plt.ylim(-800000,-500000)\n",
     "\n",
+    "# Plot lake outlines\n",
     "for key in lakes.keys():\n",
     "    lake_x = np.squeeze(lakes[key]['x'][:])\n",
     "    lake_y = np.squeeze(lakes[key]['y'][:])\n",
@@ -419,16 +354,10 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv('../../proc/Processed_Reflectivity.csv')"
+    "### Save the calculated reflectivity dataframe as a new csv file ###\n",
+    "\n",
+    "df.to_csv('./Processed_Reflectivity.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ddcccc3c-c4d5-4c06-b75f-63f0f2f24ea3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -447,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.18"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
