--- a/figures/fig2-radar-images/fig2-slw-image.ipynb
+++ b/figures/fig2-radar-images/fig2-slw-image.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d7c16f48-80c5-4702-a360-c16cd82a4b17",
+   "metadata": {},
+   "source": [
+    "# Figure 2 - Radar Images\n",
+    "\n",
+    "Plot the radar images and extracted bed reflectivity.\n",
+    "If the radar data have not already been downloaded from CReSIS there is a cell to do that here."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6c313238-f099-4189-b05e-db622d5f97c7",
@@ -11,7 +22,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import glob, h5py\n",
+    "import glob, h5py, os\n",
     "from scipy.io import loadmat\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -19,27 +30,82 @@
     "from matplotlib.gridspec import GridSpec\n",
     "\n",
     "from impdar.lib.load import load\n",
+    "%matplotlib inline\n",
     "\n",
     "from netCDF4 import Dataset\n",
-    "import geopandas as gpd"
+    "import geopandas as gpd\n",
+    "\n",
+    "# a base directory where I keep data to be loaded below\n",
+    "data_dir = os.getenv('DATAHOME')\n",
+    "# quick error check to make sure $DATAHOME is set\n",
+    "if data_dir is None:\n",
+    "    raise OSError('environment variable $DATAHOME does not exist')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d7026af-b1c6-443a-a15d-a93a44c30687",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "### Download the radar images if necessary ###\n",
+    "\n",
+    "download_radar_images = False\n",
+    "\n",
+    "cresis_base_dir = 'https://data.cresis.ku.edu/data/rds/2013_Antarctica_Basler/'\n",
+    "data_base_dir = '../../data/radar/'\n",
+    "frames = ['20131227_12','20131219_02']\n",
+    "\n",
+    "if download_radar_images:\n",
+    "\n",
+    "    # Standard focused images\n",
+    "    cresis_type = 'CSARP_standard/'\n",
+    "    if not os.path.exists(data_dir+cresis_type):\n",
+    "        os.mkdir(data_dir+cresis_type)\n",
+    "    frame = frames[0]\n",
+    "    os.system('wget -L %s%s%s/Data_img_02_%s_001.mat -P %s'%(cresis_base_dir,cresis_type,frame,frame,data_base_dir+cresis_type));\n",
+    "    frame = frames[1]\n",
+    "    os.system('wget -L %s%s%s/Data_img_02_%s_001.mat -P %s'%(cresis_base_dir,cresis_type,frame,frame,data_base_dir+cresis_type));\n",
+    "\n",
+    "    # Layer data (bed and surface picks)\n",
+    "    cresis_type = 'CSARP_layerData/'\n",
+    "    if not os.path.exists(data_dir+cresis_type):\n",
+    "        os.mkdir(data_dir+cresis_type)\n",
+    "    frame = frames[0]\n",
+    "    os.system('wget -L %s%s%s/Data_%s_001.mat -P %s'%(cresis_base_dir,cresis_type,frame,frame,data_base_dir+cresis_type));\n",
+    "    frame = frames[1]\n",
+    "    os.system('wget -L %s%s%s/Data_%s_001.mat -P %s'%(cresis_base_dir,cresis_type,frame,frame,data_base_dir+cresis_type));"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "e98ceb72-aef5-4e3f-9b5f-d61f505fd146",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "### Load the processed reflectivity dataframe ###\n",
     "\n",
-    "df = pd.read_csv('../../proc/Processed_Reflectivity.csv')\n",
+    "# If the previous notebook has not been run to get bed-echo power download it from Zenodo\n",
+    "fn = '../../proc/Processed_Reflectivity.csv'\n",
+    "if not os.path.exists(fn):\n",
+    "    os.system('wget -L https://zenodo.org/records/11201199/files/Picked_Bed_Power.csv -O ../../proc/Processed_Reflectivity.csv');\n",
+    "# Read as pandas dataframe\n",
+    "df = pd.read_csv(fn)\n",
     "\n",
+    "# Subset for Whillans Subglacial Lake\n",
     "df_slw = df[(df['Flight Day']==20131227) & (df['Segment'] == 12)]\n",
     "rclip = -4\n",
-    "lclip = len(df_slw) - len(dat.dist) + rclip\n",
+    "lclip = len(df_slw) - 2638 + rclip\n",
     "r_rel1 = df_slw['Relative Reflectivity'][lclip:rclip].values\n",
     "\n",
+    "# Subset for grounding zone\n",
     "df_gz = df[(df['Flight Day']==20131219) & (df['Segment'] == 2) & (df['Frame'] == 8)]\n",
     "r_rel2 = df_gz['Relative Reflectivity'].values"
    ]
@@ -47,135 +113,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c6bd665-2560-44fa-9875-0f4950e75eb8",
+   "id": "ef103d4c-031f-4c35-891c-14fe983079af",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "### Load the data as an ImpDAR object ###\n",
-    "dat = load('mcords_mat','../../data/radar/CSARP_standard/Data_img_02_20131227_12_001.mat')[0]\n",
-    "dat.get_projected_coords('epsg:3031')    \n",
-    "\n",
-    "### Get the CReSIS surface and bed pick times ###\n",
-    "layers = loadmat('../../data/radar/CSARP_layerData/Data_20131227_12_001.mat')['layerData']\n",
-    "b = layers[0][1][0][0][0][0][1][0][0][0][0]\n",
-    "s = layers[0][0][0][0][0][0][1][0][0][0][0]\n",
-    "\n",
-    "### Convert from pick time to sample number and then re-search for the peak bed power ###\n",
-    "bsamp = np.zeros_like(b)\n",
-    "ssamp = np.zeros_like(b)\n",
-    "p = np.empty_like(b)\n",
-    "for trace in range(dat.tnum):\n",
-    "    if np.isnan(b[trace]):\n",
-    "        bsamp[trace] = np.nan\n",
-    "        p[trace] = np.nan\n",
-    "    else:\n",
-    "        b_idx = np.argmin(abs(b[trace]-dat.travel_time*1e-6))\n",
-    "        bsamp[trace] = b_idx\n",
-    "        p[trace] = np.max(dat.data[b_idx-40:b_idx+40,trace])\n",
-    "        \n",
-    "    ### Reset the trace so that the first sample is at the ice surface rather than the airplane (for plotting) ###\n",
-    "    if np.isnan(s[trace]):\n",
-    "        s_idx = 1\n",
-    "        ssamp[trace] = np.nan\n",
-    "    else:\n",
-    "        s_idx = np.argmin(abs(s[trace]-dat.travel_time*1e-6))\n",
-    "        ssamp[trace] = s_idx\n",
-    "    dat.data[:-s_idx,trace] = dat.data[s_idx:,trace]\n",
-    "    dat.data[-s_idx:,trace] = np.nan\n",
-    "    \n",
-    "### Crop the beginning and end from the image ###\n",
-    "dat.hcrop(3238,'right')\n",
-    "dat.hcrop(600,'left')\n",
-    "p = p[599:3237]\n",
-    "b = b[599:3237]\n",
-    "s = s[599:3237]\n",
-    "\n",
-    "### Adjust time and depth vectors for updated array ###\n",
-    "dat.travel_time -= dat.travel_time[0]\n",
-    "depth = dat.travel_time*169/2.\n",
-    "\n",
-    "### Linear gain for plotting ###\n",
-    "dat.data += np.transpose(np.tile(np.linspace(0,20,dat.snum),(dat.tnum,1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec20a1b7-065a-4706-bab0-488077d1c043",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dat2 = load('mcords_mat','../../data/radar/CSARP_standard/Data_img_02_20131219_02_008.mat')[0]\n",
-    "dat2.get_projected_coords('epsg:3031')    \n",
-    "\n",
-    "layers = loadmat('../../data/radar/CSARP_layerData/Data_20131219_02_008.mat')['layerData']\n",
-    "b = layers[0][1][0][0][0][0][1][0][0][0][0]\n",
-    "s = layers[0][0][0][0][0][0][1][0][0][0][0]\n",
-    "bsamp2 = np.zeros_like(b)\n",
-    "ssamp2 = np.zeros_like(b)\n",
-    "p2 = np.empty_like(b)\n",
-    "for trace in range(dat2.tnum):\n",
-    "    if np.isnan(b[trace]):\n",
-    "        bsamp2[trace] = np.nan\n",
-    "        p2[trace] = np.nan\n",
-    "    else:\n",
-    "        b_idx = np.argmin(abs(b[trace]-dat2.travel_time*1e-6))\n",
-    "        bsamp2[trace] = b_idx\n",
-    "        p2[trace] = np.max(dat2.data[b_idx-40:b_idx+40,trace])\n",
-    "\n",
-    "    ### Reset the trace so that the first sample is at the ice surface rather than the airplane (for plotting) ###\n",
-    "    if np.isnan(s[trace]):\n",
-    "        s_idx = 1\n",
-    "        ssamp2[trace] = np.nan\n",
-    "    else:\n",
-    "        s_idx = np.argmin(abs(s[trace]-dat2.travel_time*1e-6))\n",
-    "        ssamp2[trace] = s_idx\n",
-    "    \n",
-    "    dat2.data[:-s_idx,trace] = dat2.data[s_idx:,trace]\n",
-    "    dat2.data[-s_idx:,trace] = np.nan\n",
-    "\n",
-    "### Adjust time and depth vectors for updated array ###\n",
-    "dat2.travel_time -= dat2.travel_time[0]\n",
-    "depth2 = dat2.travel_time*169/2.\n",
-    "\n",
-    "dat2.elev = np.nan*np.ones(dat.tnum)\n",
-    "dat2.reverse()\n",
-    "dat2.hcrop(1500,'right')\n",
-    "\n",
-    "r_rel2 = r_rel2[::-1][:1499]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45f91102-b3f7-40db-9d80-d6c66d30720a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "datafold = '/Users/bhills/Desktop/Amphitryon/continental-data-products/' #os.getenv('DATAHOME')\n",
+    "### Load External Datasets for Plotting ###\n",
     "\n",
     "# MODIS Mosaic of Antarctica\n",
-    "moa = '/Users/benhills/Desktop/moa125_2009_hp1_v02.0.nc'\n",
+    "moa = data_dir + 'continental-data-products/antarctica/modis/moa/moa125_2009_hp1_v02.0.nc'\n",
     "nc = Dataset(moa)\n",
     "# Crop because we don't need the full continent\n",
     "moa_x = nc['x'][22000:25000]\n",
     "moa_y = nc['y'][17000:20000]\n",
-    "moa_z = nc['z'][17000:20000,22000:25000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5b98727-22ab-4b8d-925a-baf613367a02",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "moa_z = nc['z'][17000:20000,22000:25000]\n",
+    "\n",
     "# import subglacial lake outlines (Siegfried & Fricker, 2018)\n",
     "h5f = h5py.File('../../data/outlines/test.h5', 'r')\n",
     "lake = 'WhillansSubglacialLake'\n",
@@ -189,8 +142,122 @@
     "slw_out = slw_dat['mean elev OUT'].values\n",
     "\n",
     "# Scripps Grounding Line\n",
-    "gl = '../../data/outlines/grounding-line/scripps/scripps_antarctica_polygons_v1.shp' \n",
+    "gl = data_dir + 'continental-data-products/antarctica/grounding-line/scripps/scripps_antarctica_polygons_v1.shp' \n",
     "gl_df = gpd.read_file(gl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c6bd665-2560-44fa-9875-0f4950e75eb8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "### First radar image, from Whillans Subglacial Lake ###\n",
+    "\n",
+    "# Load the data as an ImpDAR object\n",
+    "dat1 = load('mcords_mat','../../data/radar/CSARP_standard/Data_img_02_20131227_12_001.mat')[0]\n",
+    "dat1.get_projected_coords('epsg:3031')    \n",
+    "\n",
+    "# Get the CReSIS surface and bed pick times\n",
+    "layers = loadmat('../../data/radar/CSARP_layerData/Data_20131227_12_001.mat')['layerData']\n",
+    "b = layers[0][1][0][0][0][0][1][0][0][0][0]\n",
+    "s = layers[0][0][0][0][0][0][1][0][0][0][0]\n",
+    "\n",
+    "# Convert from pick time to sample number and then re-search for the peak bed power\n",
+    "bsamp = np.zeros_like(b)\n",
+    "ssamp = np.zeros_like(b)\n",
+    "p = np.empty_like(b)\n",
+    "for trace in range(dat1.tnum):\n",
+    "    if np.isnan(b[trace]):\n",
+    "        bsamp[trace] = np.nan\n",
+    "        p[trace] = np.nan\n",
+    "    else:\n",
+    "        b_idx = np.argmin(abs(b[trace]-dat1.travel_time*1e-6))\n",
+    "        bsamp[trace] = b_idx\n",
+    "        p[trace] = np.max(dat1.data[b_idx-40:b_idx+40,trace])\n",
+    "        \n",
+    "    # Reset the trace so that the first sample is at the ice surface rather than the airplane (for plotting)\n",
+    "    if np.isnan(s[trace]):\n",
+    "        s_idx = 1\n",
+    "        ssamp[trace] = np.nan\n",
+    "    else:\n",
+    "        s_idx = np.argmin(abs(s[trace]-dat1.travel_time*1e-6))\n",
+    "        ssamp[trace] = s_idx\n",
+    "    dat1.data[:-s_idx,trace] = dat1.data[s_idx:,trace]\n",
+    "    dat1.data[-s_idx:,trace] = np.nan\n",
+    "    \n",
+    "# Crop the beginning and end from the image\n",
+    "dat1.hcrop(3238,'right')\n",
+    "dat1.hcrop(600,'left')\n",
+    "p = p[599:3237]\n",
+    "b = b[599:3237]\n",
+    "s = s[599:3237]\n",
+    "\n",
+    "# Adjust time and depth vectors for updated array\n",
+    "dat1.travel_time -= dat1.travel_time[0]\n",
+    "depth = dat1.travel_time*169/2.\n",
+    "\n",
+    "# Linear gain for plotting\n",
+    "dat1.data += np.transpose(np.tile(np.linspace(0,20,dat1.snum),(dat1.tnum,1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec20a1b7-065a-4706-bab0-488077d1c043",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "### Second radar image, from grounding zone ###\n",
+    "\n",
+    "# Load the data as an ImpDAR object\n",
+    "dat2 = load('mcords_mat','../../data/radar/CSARP_standard/Data_img_02_20131219_02_008.mat')[0]\n",
+    "dat2.get_projected_coords('epsg:3031')    \n",
+    "\n",
+    "# Get the CReSIS surface and bed pick times\n",
+    "layers = loadmat('../../data/radar/CSARP_layerData/Data_20131219_02_008.mat')['layerData']\n",
+    "b = layers[0][1][0][0][0][0][1][0][0][0][0]\n",
+    "s = layers[0][0][0][0][0][0][1][0][0][0][0]\n",
+    "\n",
+    "# Convert from pick time to sample number and then re-search for the peak bed power\n",
+    "bsamp2 = np.zeros_like(b)\n",
+    "ssamp2 = np.zeros_like(b)\n",
+    "p2 = np.empty_like(b)\n",
+    "for trace in range(dat2.tnum):\n",
+    "    if np.isnan(b[trace]):\n",
+    "        bsamp2[trace] = np.nan\n",
+    "        p2[trace] = np.nan\n",
+    "    else:\n",
+    "        b_idx = np.argmin(abs(b[trace]-dat2.travel_time*1e-6))\n",
+    "        bsamp2[trace] = b_idx\n",
+    "        p2[trace] = np.max(dat2.data[b_idx-40:b_idx+40,trace])\n",
+    "\n",
+    "    # Reset the trace so that the first sample is at the ice surface rather than the airplane (for plotting)\n",
+    "    if np.isnan(s[trace]):\n",
+    "        s_idx = 1\n",
+    "        ssamp2[trace] = np.nan\n",
+    "    else:\n",
+    "        s_idx = np.argmin(abs(s[trace]-dat2.travel_time*1e-6))\n",
+    "        ssamp2[trace] = s_idx\n",
+    "    \n",
+    "    dat2.data[:-s_idx,trace] = dat2.data[s_idx:,trace]\n",
+    "    dat2.data[-s_idx:,trace] = np.nan\n",
+    "\n",
+    "# Adjust time and depth vectors for updated array\n",
+    "dat2.travel_time -= dat2.travel_time[0]\n",
+    "depth2 = dat2.travel_time*169/2.\n",
+    "\n",
+    "# Reverse direction so ice flow is left to right\n",
+    "dat2.elev = np.nan*np.ones(dat2.tnum)\n",
+    "dat2.reverse()\n",
+    "# Crop the image\n",
+    "dat2.hcrop(1500,'right')\n",
+    "r_rel2 = r_rel2[::-1][:1499]"
    ]
   },
   {
@@ -202,7 +269,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "### Plot the Figure ###\n",
     "\n",
     "plt.figure(figsize=(10,8))\n",
     "gs = GridSpec(4,11)\n",
@@ -213,9 +280,9 @@
     "ax1.pcolormesh(moa_x/1000.,moa_y/1000.,moa_z,vmin=15000,vmax=17000,cmap='Greys_r',zorder=-1,rasterized=True)\n",
     "plt.scatter(df['X']/1000.,df['Y']/1000.,c=df['Relative Reflectivity'],zorder=1,cmap='magma',s=.05,vmin=-20,vmax=20,rasterized=True)\n",
     "plt.fill_between(np.linspace(-1e8,1e8,10),-1e8,1e8,color='w',alpha=0.5)\n",
-    "plt.scatter(dat.x_coord/1000.,dat.y_coord/1000.,c=r_rel1,s=.5,zorder=3,cmap='magma',vmin=-20,vmax=20,rasterized=True)\n",
+    "plt.scatter(dat1.x_coord/1000.,dat1.y_coord/1000.,c=r_rel1,s=.5,zorder=3,cmap='magma',vmin=-20,vmax=20,rasterized=True)\n",
     "plt.plot(x/1000.,y/1000.,c='steelblue',zorder=2)\n",
-    "plt.fill(x/1000.,y/1000.,c='cyan',zorder=0)\n",
+    "plt.fill(x/1000.,y/1000.,c='cyan',zorder=0,alpha=.4)\n",
     "plt.axis('equal')\n",
     "plt.xlim(-290,-247)\n",
     "plt.ylim(-570,-545)\n",
@@ -245,26 +312,26 @@
     "\n",
     "ax3 = plt.subplot(gs[1:3,:6])\n",
     "ax3.tick_params(labelbottom=False)\n",
-    "plt.imshow(dat.data,aspect='auto',vmin=-152,vmax=-100,cmap='magma',\n",
-    "          extent=[0,np.max(dat.dist),max(depth),min(depth)],rasterized=True)\n",
+    "plt.imshow(dat1.data,aspect='auto',vmin=-152,vmax=-100,cmap='magma',\n",
+    "          extent=[0,np.max(dat1.dist),max(depth),min(depth)],rasterized=True)\n",
     "plt.ylim(900,0)\n",
     "plt.ylabel('Depth (m)')\n",
     "ax3.text(0.035,.9,'c',transform=ax3.transAxes,fontweight='bold',fontsize=12,\n",
     "         bbox=dict(facecolor='w', edgecolor='k', pad=5.0, linewidth=1.5))\n",
     "# Plot boxes for Figure 3 indicators\n",
-    "x1,x2 = dat.dist[350],dat.dist[750]\n",
-    "y1,y2 = (dat.travel_time[2150])*169/2.,(dat.travel_time[2500])*169/2.\n",
+    "x1,x2 = dat1.dist[250],dat1.dist[950]\n",
+    "y1,y2 = (dat1.travel_time[2150])*169/2.,(dat1.travel_time[2500])*169/2.\n",
     "ax3.plot([x1,x1,x2,x2,x1],[y2,y1,y1,y2,y2],c='w')\n",
-    "x1,x2 = dat.dist[1700],dat.dist[2100]\n",
-    "y1,y2 = (dat.travel_time[2000])*169/2.,(dat.travel_time[2350])*169/2.\n",
+    "x1,x2 = dat1.dist[1600],dat1.dist[2200]\n",
+    "y1,y2 = (dat1.travel_time[2000])*169/2.,(dat1.travel_time[2350])*169/2.\n",
     "ax3.plot([x1,x1,x2,x2,x1],[y2,y1,y1,y2,y2],c='w')\n",
-    "x1,x2 = dat.dist[2425],dat.dist[-1]\n",
+    "x1,x2 = dat1.dist[2300],dat1.dist[-1]\n",
     "ax3.plot([x1,x1,x2,x2,x1],[y2,y1,y1,y2,y2],c='w')\n",
     "\n",
     "### Panel D - Bed Echo Power along Chosen Radar Line ###\n",
     "\n",
     "ax4 = plt.subplot(gs[3,:6],sharex=ax3)\n",
-    "plt.scatter(dat.dist,r_rel1,c=r_rel1,vmin=-20,vmax=20,s=2,rasterized=True,cmap='magma')\n",
+    "plt.scatter(dat1.dist,r_rel1,c=r_rel1,vmin=-20,vmax=20,s=2,rasterized=True,cmap='magma')\n",
     "plt.ylabel('Rel. Reflectivity (dB)')\n",
     "plt.xlabel('Distance (km)')\n",
     "ax4.text(0.035,.8,'d',transform=ax4.transAxes,fontweight='bold',fontsize=12,\n",
@@ -291,7 +358,7 @@
     "ax5.text(0.125,.8,'e',transform=ax5.transAxes,fontweight='bold',fontsize=12,\n",
     "         bbox=dict(facecolor='w', edgecolor='k', pad=5.0, linewidth=1.5))\n",
     "\n",
-    "### Panel F - Bed Echo Power Histograms for Entire Survey Area ###\n",
+    "### Panel F - Grounding Line Radar Image ###\n",
     "\n",
     "ax6 = plt.subplot(gs[1:3,6:10])\n",
     "ax6.tick_params(labelleft=False,labelbottom=False)\n",
@@ -301,14 +368,14 @@
     "ax6.text(0.035,.9,'f',transform=ax6.transAxes,fontweight='bold',fontsize=12,\n",
     "         bbox=dict(facecolor='w', edgecolor='k', pad=5.0, linewidth=1.5))\n",
     "# Plot boxes for Figure 3 indicators\n",
-    "x1,x2 = dat2.dist[11],dat2.dist[3331-3070+250]\n",
+    "x1,x2 = dat2.dist[3331-3070-200],dat2.dist[3331-3070+200]\n",
     "y1,y2 = (dat2.travel_time[2000])*169/2.,(dat2.travel_time[2350])*169/2.\n",
     "ax6.plot([x1,x1,x2,x2,x1],[y2,y1,y1,y2,y2],c='w')\n",
     "x1,x2 = dat2.dist[3331-2600],dat2.dist[3331-2200]\n",
     "y1,y2 = (dat2.travel_time[2000])*169/2.,(dat2.travel_time[2350])*169/2.\n",
     "ax6.plot([x1,x1,x2,x2,x1],[y2,y1,y1,y2,y2],c='w')\n",
     "\n",
-    "### Panel G - Bed Echo Power Histograms for Entire Survey Area ###\n",
+    "### Panel G - Bed Echo Power for the Grounding Line Track ###\n",
     "\n",
     "ax7 = plt.subplot(gs[3,6:10],sharex=ax6)\n",
     "ax7.tick_params(labelleft=False)\n",
@@ -334,9 +401,7 @@
     "ax8.text(0.5,.8,'h',transform=ax8.transAxes,fontweight='bold',fontsize=12,\n",
     "         bbox=dict(facecolor='w', edgecolor='k', pad=5.0, linewidth=1.5))\n",
     "\n",
-    "\n",
     "### Cleanup and Save ###\n",
-    "#plt.tight_layout()\n",
     "plt.savefig('fig2-slw-image.pdf',dpi=300)"
    ]
   }
@@ -357,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.18"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
